--- a/updates/version.yaml
+++ b/updates/version.yaml
@@ -29,3 +29,5 @@
   - Add homepage to plugin details by @gergo85
   - Fixed pagination reference for non-default component names by @bnordland
   - Fixed an issue with post filtering when a category is to be "included" that doesn't have any blog posts yet by @Harti
+1.5.0:
+  - Converting to Fiotech Fiotech project
